--- a/_scss/_page-header.scss
+++ b/_scss/_page-header.scss
@@ -1,14 +1,14 @@
 .page-header {
   margin: 0;
   min-width: 100%;
-  padding: 11.5em 0 4em;
+  padding: 7em 0 6em;
   position: relative;
   width: auto;
 }
 
 @media (min-width: $bp-medium) {
   .page-header {
-    padding: 7em 0;
+    padding: 9em 0;
   }
 }
 
